--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
+    "maplibre-gl": "^1.13.0-rc.5",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
